Added retrieve collection handler.
