# domain/models_etag.go
@@ -1,0 +1,14 @@
+package domain
+
+import (
+	"strconv"
+	"time"
+)
+
+func (c *Collection) ETag() string {
+	return etag(c.Updated)
+}
+
+func etag(t *time.Time) string {
+	return "\"" + strconv.FormatInt(t.UnixNano()/int64(time.Microsecond), 36) + "\""
+}
