# infrastructure/http/routes.go
@@ -11,6 +11,7 @@ func (s *Server) Routes() http.Handler {
 
 	r.HandlerFunc("GET", "/collections", s.listCollections())
 	r.HandlerFunc("POST", "/collections", s.createCollection())
+	r.Handle("GET", "/collections/:id", s.retrieveCollection())
 
 	r.HandlerFunc("GET", "/jobs", s.listJobs())
 
